--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,13 +1,59 @@
 @import "~bootstrap/scss/bootstrap.scss";
 
-/* 
+body{
+    display: flex;
+    height: 100vh;
+    align-items: center;
+    justify-content: center;
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+.cable{
+    width: 10px;
+    height: 80px;
+}
 
-*/
+.light-container,.cable{
+    background: #222;
+}
+
+.light-container{
+    border-radius: 4rem;
+}
+
+.light{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    transition: 500ms background-color ease, 500ms box-shadow ease, border-color 500ms ease;
+}
+
+.light:not(:last-of-type){
+    margin-bottom: 1rem;
+}
+
+.red{
+    background: #b81d13;
+    border: 1px solid darkred;
+}
+
+.yellow{
+    background: #efb700;
+    border: 1px solid darkgoldenrod;
+}
+
+.green{
+    background: #008450;
+    border: 1px solid darkgreen;
+}
+
+.selected{
+    &.red{
+        box-shadow: 0px 0px 30px 4px red;
+    }
+    &.green{
+        box-shadow: 0px 0px 30px 4px green;
+    }
+    &.yellow{
+        box-shadow: 0px 0px 30px 4px yellow;
+    }
+}
